--- a/index-START.html
+++ b/index-START.html
@@ -58,9 +58,34 @@
         background: black;
         position: absolute;
         top: 50%;
+        transform-origin: 100%;
+        transform: rotate(90deg);
+        transition: all 0.05s;
+        transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
       }
     </style>
 
-    <script></script>
+    <script>
+      const secondHand = document.querySelector(".second-hand");
+      const minHand = document.querySelector(".min-hand");
+      const hourHand = document.querySelector(".hour-hand");
+
+      function setDate() {
+        const now = new Date();
+        const seconds = now.getSeconds();
+        const secondsDegree = (seconds / 60) * 360 + 90;
+        secondHand.style.transform = `rotate(${secondsDegree}deg)`;
+
+        const minutes = now.getMinutes();
+        const minutesDegree = (minutes / 60) * 360 + 90;
+        minHand.style.transform = `rotate(${minutesDegree}deg)`;
+
+        const hours = now.getHours();
+        const hoursDegree = (hours / 60) * 360 + 90;
+        hourHand.style.transform = `rotate(${hoursDegree}deg)`;
+      }
+
+      setInterval(setDate, 1000);
+    </script>
   </body>
 </html>
